# evaluation_avionica_g4_v0

./: .gitignore  .mxproject  CMakeCache.txt  CMakeLists.txt  README.md  build.ninja  cmake_install.cmake  compile_commands.json  evaluation_avionica_g4_v0.ioc
Core/Src/: gpio.c  i2c.c  main.c  stm32g4xx_it.c
Drivers/WESensorsSDK/platform/: platform.c
app/: app.c  app.h  ejemplo1.c  main.c
cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
examples/: main.c
midd/: CMakeLists.txt
poc/wsen_isds/: main.c
